@@ -15,6 +15,15 @@ int main (int argc, char* argv[])
     fprintf(stderr, "Error creating .xlsx file\n");
     return 1;
   }
+  //write column names
+  xlsxiowrite_add_column(handle, "Col1");
+  xlsxiowrite_add_column(handle, "Col2");
+  xlsxiowrite_add_column(handle, "Col3");
+  xlsxiowrite_add_column(handle, "Col4");
+  xlsxiowrite_add_column(handle, "Col5");
+  xlsxiowrite_add_column(handle, "Col6");
+  xlsxiowrite_add_column(handle, "Col7");
+  xlsxiowrite_next_row(handle);
   //write data
   int i;
   for (i = 0; i < 1000; i++) {
